Fix/change minor stuff. I found more static code analyzers. Made a lot of stuff final. GSONic is now abstract.